# solana-txn-tui

./: .gitignore  Cargo.toml  DISTRIBUTION.md  README.md  install.sh
.github/workflows/: release.yml
examples/: test_specific_txn.rs
src/: app.rs  events.rs  main.rs
src/solana/: client.rs  mod.rs  types.rs
src/ui/: account_view.rs  input_screen.rs  mod.rs  network_selection.rs  styles.rs  transaction_view.rs
src/utils/: validators.rs
