[package]
name = "solana-txn-tui"
version = "0.1.0"
edition = "2021"
authors = ["Raghav Sharma <raghu250407@gmail.com>"]
description = "A comprehensive TUI for exploring Solana transactions and accounts"
license = "MIT"
repository = "https://github.com/Some1UKnow/solana-txn-tui"
homepage = "https://github.com/Some1UKnow/solana-txn-tui"
readme = "README.md"
keywords = ["solana", "blockchain", "tui", "terminal", "crypto"]
categories = ["command-line-utilities"]

[[bin]]
name = "solana-txn-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
solana-client = "2.3"
solana-sdk = "2.3"
solana-transaction-status = "2.3"
solana-account-decoder = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
unicode-width = "0.1"
bs58 = "0.5"

[profile.release]
strip = true      # Automatically strip symbols from the binary
opt-level = "z"   # Optimize for size
lto = true        # Link Time Optimization
codegen-units = 1 # Reduce parallelism to save memory (and improve size)
panic = "abort"   # Remove panic unwinding (smaller binary)